--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </header>
 
 <div class="mainimage">
-  <img src="images\main1.jpg" alt=""
+  <img src="images/main1.jpg" alt=""
 height="860" width="1920">
 </div>
 
