--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   <img src="images/main1.jpg" alt=""
 height="860" width="1920">
 </div>
-
+	<img src="images/001.jpg" width="1920" height="118" alt="">
+  	<img src="images/002.jpg" width="1920" height="118" alt="">
+    <img src="images/003.jpg" width="1920" height="118" alt="">
 <tr>
 		<td colspan="13">
 			<img src="images/01.jpg" width="1920" height="118" alt=""></td>
