--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>Month</title>
   <script src="https://use.fontawesome.com/05d5bf2795.js"></script>
 </head>
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"
+>
 <!-- Save for Web Slices (제목 없음-3) -->
 <table id="__01" width="1920" height="6620" border="0" cellpadding="0" cellspacing="0">
 <body>
@@ -18,20 +19,22 @@
 
   <nav class="navbar">
     <div class="navbar_logo">
+
 <a href="">MONTH</a>
+
     </div>
 
     <ul class="navbar_menu">
 <li><a href="">홈</a></li>
 <li><a href="">회사소개</a></li>
-<li><a href="">사진</a></li>
-<li><a href="">호텔정보</a></li>
-<li><a href="">식당정보</a></li>
+<li><a href="#city">사진</a></li>
+<li><a href="#hotel">호텔정보</a></li>
+<li><a href="#food">식당정보</a></li>
     </ul>
 
     <ul class="navbar_icons">
-      <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-      <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+      <li><a href="http://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></a></i></li>
+      <li><a href="http://www.facebook.com"><i class="fa fa-facebook-square" aria-hidden="true"></a></i></li>
 
     </ul>
 
@@ -45,7 +48,7 @@
 height="860" width="1920">
 </div>
 	<img src="images/001.jpg" width="1920" height="118" alt="">
-  	<img src="images/002.jpg" width="1920" height="118" alt="">
+  	<img src="images/002.jpg" width="1920" height="148" alt="">
     <img src="images/003.jpg" width="1920" height="118" alt="">
 <tr>
 		<td colspan="13">
@@ -60,14 +63,18 @@ height="860" width="1920">
 			<img src="images/03.jpg" width="1920" height="121" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="6">
 			<img src="images/04.jpg" width="310" height="875" alt=""></td>
+
 		<td colspan="3">
-			<img src="images/05.jpg" width="1300" height="875" alt=""></td>
+			<img src="images/05.jpg" width="1100" height="675" alt=""></td>
+      <td id="city"></td>
 		<td colspan="4" rowspan="3">
 			<img src="images/06.jpg" width="310" height="1606" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="5" rowspan="2">
 			<img src="images/07.jpg" width="301" height="731" alt=""></td>
 		<td colspan="4">
@@ -80,6 +87,7 @@ height="860" width="1920">
 			<img src="images/10.jpg" width="1300" height="417" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="3" rowspan="2">
 			<img src="images/11.jpg" width="218" height="1294" alt=""></td>
 		<td colspan="8">
@@ -92,6 +100,7 @@ height="860" width="1920">
 			<img src="images/14.jpg" width="1485" height="297" alt=""></td>
 	</tr>
 	<tr>
+          <td id="hotel"></td>
 		<td colspan="2">
 			<img src="images/15.jpg" width="173" height="1684" alt=""></td>
 		<td colspan="10">
@@ -100,6 +109,7 @@ height="860" width="1920">
 			<img src="images/17.jpg" width="146" height="1684" alt=""></td>
 	</tr>
 	<tr>
+        <td id="food"></td>
 		<td rowspan="3">
 			<img src="images/18.jpg" width="95" height="450" alt=""></td>
 		<td colspan="7">
@@ -108,16 +118,19 @@ height="860" width="1920">
 			<img src="images/20.jpg" width="911" height="342" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="7">
 			<img src="images/21.jpg" width="914" height="130" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="9">
-			<img src="images/22.jpg" width="1568" height="108" alt=""></td>
+			<img src="images/21.jpg" width="1568" height="108" alt=""></td>
 		<td colspan="3" rowspan="3">
-			<img src="images/23.jpg" width="257" height="882" alt=""></td>
+			<img src="images/25.jpg" width="257" height="882" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="4">
 			<img src="images/24.jpg" width="262" height="475" alt=""></td>
 		<td>
@@ -130,10 +143,12 @@ height="860" width="1920">
 			<img src="images/28.jpg" width="654" height="475" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="10">
 			<img src="images/29.jpg" width="1663" height="299" alt=""></td>
 	</tr>
 	<tr>
+
 		<td colspan="13">
 			<img src="images/30.jpg" width="1920" height="494" alt=""></td>
 	</tr>
