--- a/index.html
+++ b/index.html
@@ -9,10 +9,296 @@
   <title>Month</title>
   <script src="https://use.fontawesome.com/05d5bf2795.js"></script>
 </head>
+<style>
+
+.mainimage {    width: 100%;
+    text-align: center;
+    font-size: 20px;
+
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.keyword2 {
+
+    width: 100%;
+    text-align: center;
+    font-size: 10px;
+
+}
+
+.keyword2 li {
+  padding: 0px 100px;
+
+}
+
+.keyword2 {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+  margin-top:50px;
+}
+
+.keyword2 {
+  background-color: #957862;
+  border: 30px;
+  width: 1920px;
+  height: 100px;
+  	font-size: 30px;
+    color: white;
+    width: 100%;
+    justify-content: center;
+}
+
+.may {
+  width: 100%;
+   text-align: center;
+   font-size: 50px;
+ justify-content: center;
+  margin-top:300px;
+
+}
+
+.mainpicture {
+  width: 100%;
+   text-align: center;
+   font-size: 60px;
+
+  margin-top:100px;
+
+}
+
+.may1 {
+  background-color: #FFFFFF;
+width: 100%
+
+    color: black;
+    width: 100%;
+font-size: 40px;
+}
+
+.may1 {position : relative;
+
+ text-align: justify;
+ margin-top: 50px;
+margin-left: 300px;}
+
+ .may2 {
+   background-color: #FFFFFF;
+ width: 100%
+
+     color: black;
+     width: 100%;
+font-size: 30px;
+margin-left: 300px;
+ margin-top:50px;
+ }
+
+ .may2 {position : relative;
+
+  text-align: left;}
+
+
+
+ .more{  width: 100%;
+   text-align: center;
+     margin-top:100px;
+ }
+
+.mainimage2 {
+  width: 100%;
+  text-align: center;
+    margin-top:500px;
+}
+.mainimage3 {
+  width: 100%;
+  text-align: center;
+    margin-top:500px;
+}
+
+.main4 {position : relative;
+  width: 100%
+
+      color: black;
+      width: 100%;
+ font-size: 50px;
+left: 1070px;
+top: -1300px;
+
+}
+
+.main5 {position : relative;
+  width: 100%
+
+      color: black;
+      width: 100%;
+ font-size: 15px;
+left: 1070px;
+top: -1200px;
+
+}
+
+.move {position : relative;
+  width: 100%;
+  text-align: right;
+ top:-2000px;
+}
+
+.food {
+  width: 100%;
+  text-align: center;
+    margin-top: -500px;
+    font-size: 50px;
+}
+
+.food2 {
+  width: 100%;
+text-align: center;
+    font-size: 30px;
+    margin-top: 30px;
+}
+
+.buger {position : relative;
+  left: -300px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+}
+
+.burgername {position : relative;
+  left: 300px;
+  top: -610px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+
+font-size: 30px;
+
+}
+
+.burgername2 {position : relative;
+  left: 1000px;
+  top: -610px;
+  width: 100%;
+  text-align: right
+    margin-top: 50px;
+
+font-size: 20px;
+
+}
+
+.burgername3 {position : relative;
+  left: -650px;
+  top: -530px;
+  width: 100%;
+  text-align: right;
+}
+
+.tin {position : relative;
+  left:-300px;
+  top: -410px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+
+font-size: 30px;
+
+}
+
+.tinname {position : relative;
+  left: 500px;
+  top: -610px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+
+font-size: 30px;
+
+}
+
+.tinname2 {position : relative;
+  left: 1300px;
+  top: -610px;
+  width: 100%;
+  text-align: left;
+    margin-top: 50px;
+
+font-size: 20px;
+
+}
+
+.tinname3 {position : relative;
+  left: -400px;
+  top: -550px;
+  width: 100%;
+  text-align: right;
+}
+
+.fish {position : relative;
+  left:00px;
+  top: -410px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+
+font-size: 30px;
+
+}
+
+.fishname1 {position : relative;
+  left: 570px;
+  top: -610px;
+  width: 100%;
+  text-align: center;
+    margin-top: 100px;
+
+font-size: 30px;
+
+}
+
+.fishname2 {position : relative;
+  left: 1300px;
+  top: -610px;
+  width: 100%;
+  text-align: left;
+    margin-top: 50px;
+
+font-size: 20px;
+
+}
+
+.fishname3 {position : relative;
+  left: -400px;
+  top: -550px;
+  width: 100%;
+  text-align: right;
+}
+
+.foot {
+  background-color: #454443;
+  border: 20px;
+  width: 100%
+
+
+}
+
+.foot1 {position : relative;
+
+  top: -0px;
+  width: 100%;
+height: 580px;
+  text-align: center;
+}
+
+
+
+
+
+</style>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"
 >
 <!-- Save for Web Slices (제목 없음-3) -->
-<table id="__01" width="1920" height="6620" border="0" cellpadding="0" cellspacing="0">
+
 <body>
   <header>
 
@@ -25,9 +311,9 @@
     </div>
 
     <ul class="navbar_menu">
-<li><a href="">홈</a></li>
-<li><a href="">회사소개</a></li>
-<li><a href="#city">사진</a></li>
+<li><a href="C:/Users/N/Desktop/month1/css0609/0610/index.html">홈</a></li>
+<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-1.html">회사소개</a></li>
+<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-3.html">도시정보</a></li>
 <li><a href="#hotel">호텔정보</a></li>
 <li><a href="#food">식당정보</a></li>
     </ul>
@@ -45,147 +331,173 @@
 
 <div class="mainimage">
   <img src="images/main1.jpg" alt=""
-height="860" width="1920">
+height="660" width="1520">
 </div>
-	<img src="images/001.jpg" width="1920" height="118" alt="">
-  	<img src="images/002.jpg" width="1920" height="148" alt="">
-    <img src="images/003.jpg" width="1920" height="118" alt="">
-<tr>
-		<td colspan="13">
-			<img src="images/01.jpg" width="1920" height="118" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="13">
-			<img src="images/02.jpg" width="1920" height="78" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="13">
-			<img src="images/03.jpg" width="1920" height="121" alt=""></td>
-	</tr>
-	<tr>
+<div class="keyword2">
+  <li> <h3>이번 여행 키워드</h1></li>
+  <li><h6>01 따뜻한</h6></li>
+  <li><h6>02 휴식</h6></li>
+  <li><h6>03 나만의 공간</h6></li>
+</div>
 
-		<td colspan="6">
-			<img src="images/04.jpg" width="310" height="875" alt=""></td>
+<div class="may">
+  5월을 왜 싱가포르로 결정 하셨나요?
+</div>
 
-		<td colspan="3">
-			<img src="images/05.jpg" width="1100" height="675" alt=""></td>
-      <td id="city"></td>
-		<td colspan="4" rowspan="3">
-			<img src="images/06.jpg" width="310" height="1606" alt=""></td>
-	</tr>
-	<tr>
+<div class="mainpicture">
 
-		<td colspan="5" rowspan="2">
-			<img src="images/07.jpg" width="301" height="731" alt=""></td>
-		<td colspan="4">
-			<img src="images/08.jpg" width="1309" height="314" alt=""></td>
-	</tr>
-	<tr>
-		<td>
-			<img src="images/09.jpg" width="9" height="417" alt=""></td>
-		<td colspan="3">
-			<img src="images/10.jpg" width="1300" height="417" alt=""></td>
-	</tr>
-	<tr>
+<img src="images/05.jpg" width="1280" height="800" alt="">
 
-		<td colspan="3" rowspan="2">
-			<img src="images/11.jpg" width="218" height="1294" alt=""></td>
-		<td colspan="8">
-			<img src="images/12.jpg" width="1485" height="997" alt=""></td>
-		<td colspan="2" rowspan="2">
-			<img src="images/13.jpg" width="217" height="1294" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="8">
-			<img src="images/14.jpg" width="1485" height="297" alt=""></td>
-	</tr>
-	<tr>
-          <td id="hotel"></td>
-		<td colspan="2">
-			<img src="images/15.jpg" width="173" height="1684" alt=""></td>
-		<td colspan="10">
-			<img src="images/16.jpg" width="1601" height="1684" alt=""></td>
-		<td>
-			<img src="images/17.jpg" width="146" height="1684" alt=""></td>
-	</tr>
-	<tr>
-        <td id="food"></td>
-		<td rowspan="3">
-			<img src="images/18.jpg" width="95" height="450" alt=""></td>
-		<td colspan="7">
-			<img src="images/19.jpg" width="914" height="212" alt=""></td>
-		<td colspan="5" rowspan="2">
-			<img src="images/20.jpg" width="911" height="342" alt=""></td>
-	</tr>
-	<tr>
+</div>
 
-		<td colspan="7">
-			<img src="images/21.jpg" width="914" height="130" alt=""></td>
-	</tr>
-	<tr>
+<div class="space">
 
-		<td colspan="9">
-			<img src="images/21.jpg" width="1568" height="108" alt=""></td>
-		<td colspan="3" rowspan="3">
-			<img src="images/25.jpg" width="257" height="882" alt=""></td>
-	</tr>
-	<tr>
-
-		<td colspan="4">
-			<img src="images/24.jpg" width="262" height="475" alt=""></td>
-		<td>
-			<img src="images/25.jpg" width="39" height="475" alt=""></td>
-		<td colspan="2">
-			<img src="images/26.jpg" width="672" height="475" alt=""></td>
-		<td>
-			<img src="images/27.jpg" width="36" height="475" alt=""></td>
-		<td colspan="2">
-			<img src="images/28.jpg" width="654" height="475" alt=""></td>
-	</tr>
-	<tr>
-
-		<td colspan="10">
-			<img src="images/29.jpg" width="1663" height="299" alt=""></td>
-	</tr>
-	<tr>
-
-		<td colspan="13">
-			<img src="images/30.jpg" width="1920" height="494" alt=""></td>
-	</tr>
-	<tr>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="95" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="78" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="45" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="44" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="39" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="9" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="663" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="36" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="601" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="53" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="40" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="71" height="1" alt=""></td>
-		<td>
-			<img src="images/&#xc2a4;&#xd398;&#xc774;&#xc11c;.gif" width="146" height="1" alt=""></td>
-	</tr>
-</table>
-<!-- End Save for Web Slices -->
-</body>
+</div>
 
 
+<div class="may1">
 
-	  </div>
+따뜻한 공기와 깨끗한 거리<br>
+
+
+</div>
+
+<div class="may2">
+
+<br>
+싱가포르는 동남아시아에 위치하고 있으며 365일 따뜻함을 유지하고 있습니다.
+
+</div>
+
+<div class="more">
+  <a href="C:/Users/N/Desktop/month1/css0609/0610/0608-3.html">
+  <img src="images/300.jpg" />
+  </a>
+</div>
+
+<div class="mainimage2">
+  <img src="images/4x/9.jpg" alt=""
+height="900" width="1300">
+</div>
+
+<div class="mainimage3">
+  <img src="images/4x/10.jpg" alt=""
+width="1301" height="1304">
+</div>
+
+<div class="main4">
+  5월<br>
+  최고의<br>
+  호텔 정보
+</div>
+
+<div class="main5">
+이달의 베스트 호텔을 확인 할 수 있습니다.<br>
+<br><br>
+본 내용은 호텔의 정보를 짧고 정확하게 전달하며<br>
+<br><br>
+기존에 호텔에서 제공하는 내용과 같은 정보와<br>
+<br><br>
+사이트에서 제공하는 정보가 함께 있으며 회원님들이<br>
+<br><br>
+호텔을 이용하는 동안에 효율적인 이용 방법을 제공하여<br>
+<br><br>
+보다 만족스러운 여행을 제공하고자 합니다.
+<br><br><br><br>
+<img src="images/4x/11.jpg" />
+</div>
+
+<div class="move">
+<img src="images/4x/12.jpg" />
+
+</div>
+
+<div class="food">
+
+IN THE VICINITY of HOTEL
+
+</div>
+
+<div class="food2">
+
+호텔 주변에 가장 인기있는 맛집
+
+</div>
+
+</div>
+
+<div class="buger">
+  <img src="images/4x/13.jpg"width="600" height="500" alt="">
+
+</div>
+
+<div class="burgername">
+  BLACK TAP CRAFT BURGERS & BEER<br><br>
+</div>
+
+<div class="burgername2">
+  뉴욕 레스토랑의 첫 번째 아시아 지점에서 두툼한<br>
+고메 햄버거, 풍성하게 쌓아 올린 밀크셰이크,<br>
+생맥주와 칵테일을 맘껏 맛보세요.<br>
+<br>
+Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
+정취를 지닌 미국 식당의 분위기를 고스란히<br>
+되살리고 있습니다.<br>
+<br>
+다양한 종류의 수제 햄버거를 메뉴로 선보입니다. <br>
+</div>
+
+<div class="burgername3">
+
+  <img src="images/4x/20.jpg"width="250" height="100" alt="">
+</div>
+
+<div class="tin">
+  <img src="images/4x/21.jpg"width="600" height="500" alt="">
+
+  <div class="tinname">
+    Din Tai Fung(딘타이펑)<br><br>
+  </div>
+
+  <div class="tinname2">
+    The New York Times 선정 세계 10대 레스토랑 <br>
+    중 하나로 선정된 레스토랑에서 세계적 명성의 <br>
+    돼지고기 덤플링을 맛보세요. <br>
+     <br>
+    이 대만 레스토랑은 또한 새우와 달걀을 넣은 <br>
+    볶음밥(Fried Rice with Shrimp and Eggs), <br>
+    찐 닭고기 수프(Steamed Chicken Soup), <br>
+    등 유명 요리를 선보입니다. <br>
+  </div>
+
+  <div class="tinname3">
+    <img src="images/4x/22.png"width="200" height="100" alt="">
+</div>
+
+    <div class="fish">
+      <img src="images/4x/23.jpg"width="600" height="500" alt="">
+
+      <div class="fishname1">
+      고든 램지의 Bread Street Kitchen<br><br>
+      </div>
+
+      <div class="fishname2">
+  워터프론트를 바라보는 활기찬 공간에서<br>
+  피시 앤 칩스(Fish & Chips), 비프 웰링턴<br>
+  (Beef Wellington), 스코치 에그(Scotch Egg),<br>
+  클래식 로스트와 같은 영국식 전통 요리를 편안<br>
+  하게 즐겨보세요. <br>
+  <br>
+  빈티지하면서 모던한 감각이 결합된 이곳의<br>
+  분위기는 숨겨진 스피커에서 나오는<br>
+  음악으로 더욱 고조됩니다.<br>
+      </div>
+
+<footer>
+  <div class="foot">
+    <div class="foot1">
+      <img src="images/4x/26.jpg" alt="">
+  </div>
+</footer>
 </body>
 </html>
