--- a/0608-1.html
+++ b/0608-1.html
@@ -9,8 +9,6 @@
 </head>
 <style>
 
-.main	{	color: black;
-}
 .box1 {position : relative;
 	left: 350px;
 	top: 50px;
@@ -111,9 +109,9 @@ footer {	position : relative;
     </div>
 
     <ul class="navbar_menu">
-<li><a href="C:\Users\N\Desktop\month1\css0609\0610\index.html">홈</a></li>
-<li><a href="C:/Users/N/Desktop/html1111/0608-1.html">회사소개</a></li>
-<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-3.html">도시정보</a></li>
+<li><a href="index.html">홈</a></li>
+<li><a href="0608-1.html">회사소개</a></li>
+<li><a href="0608-3.html">도시정보</a></li>
 <li><a href="#hotel">호텔정보</a></li>
 <li><a href="#food">식당정보</a></li>
     </ul>
@@ -127,11 +125,11 @@ footer {	position : relative;
 
 	<ul class="box1">
 	<div class="menu1">
-		<li><a href="C:\Users\N\Desktop\month1\css0609\0610\index.html"><h2>홈</h3></a></li>
-	<li><a href="C:/Users/N/Desktop/html1111/0608-1.html"><h2>회사소개</h3></a></li>
-	<li><a href="C:\Users\N\Desktop\month1\css0609\0610\0608-2.html">MONTH란?</a></li>
-	<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608.html">HISTORY</a></li>
-	<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-4.html"><h2>도시소개</h3></a></li>
+		<li><a href="index.html"><h2>홈</h3></a></li>
+	<li><a href="0608-1.html"><h2>회사소개</h3></a></li>
+	<li><a href="0608-2.html">MONTH란?</a></li>
+	<li><a href="0608.html">HISTORY</a></li>
+	<li><a href="0608-4.html"><h2>도시소개</h3></a></li>
 
 
 	<li><a href="#hotel"><h2>호텔정보</h2></a></li>
