--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@ height: 580px;
     </div>
 
     <ul class="navbar_menu">
-<li><a href="C:/Users/N/Desktop/month1/css0609/0610/index.html">홈</a></li>
-<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-1.html">회사소개</a></li>
-<li><a href="C:/Users/N/Desktop/month1/css0609/0610/0608-3.html">도시정보</a></li>
+<li><a href="index.html">홈</a></li>
+<li><a href="0608-1.html">회사소개</a></li>
+<li><a href="0608-3.html">도시정보</a></li>
 <li><a href="#hotel">호텔정보</a></li>
 <li><a href="#food">식당정보</a></li>
     </ul>
