--- a/0608.html
+++ b/0608.html
@@ -139,10 +139,10 @@ footer {	position : relative;
 				<li><a href="0608-1.html"><h2>회사소개</h3></a></li>
 				<li><a href="0608-2.html">MONTH란?</a></li>
 				<li><a href="0608.html">HISTORY</a></li>
-				<li><a href="0608-4.html"><h2>도시소개</h3></a></li>
+				<li><a href="0608-3.html"><h2>도시소개</h3></a></li>
 
 
-<li><a href="#hotel"><h2>호텔정보</h2></a></li>
+<li><a href="0608-4.html"><h2>호텔정보</h2></a></li>
 <li><a href="#hotel">객실정보</a></li>
 <li><a href="#hotel">혜택</a></li>
 
