--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ height: 580px;
 <li><a href="index.html">홈</a></li>
 <li><a href="0608-1.html">회사소개</a></li>
 <li><a href="0608-3.html">도시정보</a></li>
-<li><a href="#hotel">호텔정보</a></li>
+<li><a href="0608-4.html">호텔정보</a></li>
 <li><a href="#food">식당정보</a></li>
     </ul>
 
@@ -448,8 +448,9 @@ Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
 </div>
 
 <div class="burgername3">
-
+<a href="https://blacktap.com/location/singapore/">
   <img src="images/4x/20.jpg"width="250" height="100" alt="">
+  </a>
 </div>
 
 <div class="tin">
