--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ font-size: 20px;
 }
 
 .foot {
-  background-color: #454443;
+  background-color: #443735;
   border: 20px;
   width: 100%
 
@@ -284,9 +284,9 @@ font-size: 20px;
 
 .foot1 {position : relative;
 
-  top: -0px;
-  width: 100%;
-height: 580px;
+  top: -5px;
+  width: 3000px;
+height: 490px;
   text-align: center;
 }
 
@@ -497,7 +497,7 @@ Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
 <footer>
   <div class="foot">
     <div class="foot1">
-      <img src="images/4x/26.jpg" alt="">
+      <img src="images/30.jpg" alt="">
   </div>
 </footer>
 </body>
