--- a/0608-1.html
+++ b/0608-1.html
@@ -1,95 +1,113 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>quiz 2 </title>
+<title>Month </title>
 <link rel="stylesheet" href="style.css">
 <script src="https://use.fontawesome.com/05d5bf2795.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <style>
 
-.box1 {position : relative;
-	left: 350px;
-	top: 50px;
-         width: 200px;
-         height: 500px;
-         border: 0px solid #000000;
-	font-size: 30px;
-	color: #000000}
-
-.box1 {background-color: #443735;}
-
-.menu1 {
-  display: block;
-  list-style: none;
-  padding-left: 2px;
+.main {
+	margin-bottom: 0px;
+margin-top: 0px;
 
 }
 
-.menu1 li:hover {
-  background-color: #957862;
-  border-radius: 2px;
 
-}
-
-.menu1 li {
-  padding: 4px 10px;
-	margin: px;
-		font-size: 15px;
-}
-
-	.box1 {
-		color: #000000}
-
-	.box2 {position : relative;
-		left: 350px;
-		top: 50px;
-	         width: 200px;
-	         height: 200px;
-margin-top: 20px;
-	         border: 0px solid #000000;
-
-		font-size: 30px;
-		color: #FFFFFF;}
 
 		.explain{position : relative;
-left: 700px;
-		 top: -650px;
+left: -150px;
+		 top: -520px;
 		 color:black;
-		 border: 1px solid #ffffff;
+
+		 text-align: center;
+		 font-family: 나눔스퀘어_ac light;
+		 font-size: 20px;
 		}
 
 		.explain1{position : relative;
-left: 700px;
-		 top: -650px;
+		right: -700px;
+				 top: -320px;
 		 color:black;
-		 border: 1px solid #ffffff;
-		 margin-top: 10px;
+
+
+		 font-size: 20px;
+text-align: left;
+
+		 font-family: 나눔스퀘어_ac light;
 		}
 
 .imagelogo1 {
 	position : relative;
 left: 700px;
-	 top: -650px;
-	 color:black;
-	 border: 1px solid #ffffff;
+	 top: -430px;
+
 	 margin-top: 30px;
+	 text-align: left;
 }
 
-footer {	position : relative;
+@media screen and (min-width: 768px) {
+  .box1 { flex-direction: row;
+  align-items: flex-start;
+  padding: 8px 24px;
+}}
 
-	top : -100px;
-          border: 1px solid #000000;
-	height: 200px;
-	weight: 1000px;
+	.menu1 li {
+	  color: #000000;
+	}
 
-	background-position: center;
-          background-color: #443735;
+	.navbar_icons li {
+	  padding: 4px 10px;
+	}
 
-	text-align: center;
-	font-size: 20px;
-	color: #FFFFFF;}
+	.box1 {position : relative;
+		left: 350px;
+		top: 50px;
+	         width: 180px;
+	         height: 550px;
+
+		font-size: 20px;
+		color: #FFFFFF}
+
+	.box1 {background-color: #443735;}
+
+	.menu1 {
+	  display: block;
+	  list-style: none;
+	  padding-left: 4px;
+	 font-family: 나눔스퀘어_ac light;
+	}
+
+	.menu1 li:hover {
+	  background-color: #957862;
+	  border-radius: 2px;
+
+	}
+
+	.menu1 li {
+	  padding: 4px 10px;
+		margin: px;
+			font-size: 15px;
+ text-align: center;
+	}
+
+		.box1 {
+			color: #000000}
+
+
+
+			.box3 {
+
+			      text-align: center;
+
+				font-size: 30px;
+				color: #FFFFFF;}
+
+footer {
+	margin-top: -500px;
+}
 
 </style>
 
@@ -97,7 +115,9 @@ footer {	position : relative;
 	<header>
 <div class="mainlogo">
 	<div class="main">
-<a href="C:\Users\N\Desktop\month1\css0609\0610\index.html"> MONTH</a>
+		<a href="index.html">
+<img src="image11/4x/300.jpg" width="200" height="100" alt="">
+</a>
 </div>
 </div>
 
@@ -112,8 +132,8 @@ footer {	position : relative;
 <li><a href="index.html">홈</a></li>
 <li><a href="0608-1.html">회사소개</a></li>
 <li><a href="0608-3.html">도시정보</a></li>
-<li><a href="#hotel">호텔정보</a></li>
-<li><a href="#food">식당정보</a></li>
+<li><a href="0608-4.html">호텔정보</a></li>
+<li><a href="0608-6.html">식당정보</a></li>
     </ul>
 
     <ul class="navbar_icons">
@@ -122,10 +142,10 @@ footer {	position : relative;
 
     </ul>
 	</header>
-
+<div class="box2">
 	<ul class="box1">
 	<div class="menu1">
-		<li><a href="index.html"><h2>홈</h3></a></li>
+		<li><a href="index.html"><h2 >홈</h3></a></li>
 	<li><a href="0608-1.html"><h2>회사소개</h3></a></li>
 	<li><a href="0608-2.html">MONTH란?</a></li>
 	<li><a href="0608.html">HISTORY</a></li>
@@ -133,46 +153,45 @@ footer {	position : relative;
 
 
 	<li><a href="0608-4.html"><h2>호텔정보</h2></a></li>
-	<li><a href="#hotel">객실정보</a></li>
-	<li><a href="#hotel">혜택</a></li>
+	<li><a href="0608-5.html">객실정보</a></li>
 
-	<li><a href="#hotel"><h2>식당정보</h2></a></li>
+
+	<li><a href="0608-6.html"><h2>식당정보</h2></a></li>
 
 	</div>
 	</ul>
-<div class="box2">
 
-</div>
 <div class="explain">
 	홈 > 회사소개 > 회사소개
 </div>
 
 <div class="imagelogo1">
-	<img src="image11/1x/111.jpg" width="400" height="200" alt="">
+	<img src="image11/4x/300.jpg" width="400" height="200" alt="">
 </div>
 
 <div class="explain1">
 	저희 MONTH는 직접 찾아가서 조사를 통한 자료를 정리하여<br>
+	<br>
 이달에 가장 적절한 날씨와 좋은 시기인 단 하나의 도시를<br>
+<br>
 여러분들에게 소개 해드립니다.<br>
 <br>
+<br>
 회사의 컨셉에 맞게 매달 달라지는 트렌드에 맞게 변신하는<br>
+<br>
 사이트의 내부 모습과 깔끔한 디자인과 세련된 레이아웃으로<br>
+<br>
 어떤 추천 사이트보다 쉽고 빠르게 찾을 수 있습니다.
+
 </div>
 
 
+<div class="fot">
+<tr>
 
-<footer>
-
-    <br>
-   다음달 여행 정보를 미리 알고 싶다면?<br>
-   <div id="box1">
-	</div>
-	<div id="box2">
-   MONTH
+	<td colspan="13">
+		<img src="images/30.jpg" width="1920" height="494" alt=""></td>
+</tr>
 </div>
- </footer>
-
 </body>
 </html>
