--- a/0608-3.html
+++ b/0608-3.html
@@ -2,29 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>quiz 2 </title>
+<title>Month </title>
 <link rel="stylesheet" href="style.css">
 <script src="https://use.fontawesome.com/05d5bf2795.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <style>
+
+.navbar_icons li {
+  padding: 4px 0px;
+}
+
 .box1 {position : relative;
 	left: 350px;
 	top: 50px;
-         width: 200px;
-         height: 500px;
-         border: 0px solid #000000;
-	font-size: 30px;
-	color: #000000}
+         width: 180px;
+         height: 550px;
+
+	font-size: 20px;
+	color: #FFFFFF}
 
 .box1 {background-color: #443735;}
 
 .menu1 {
   display: block;
   list-style: none;
-  padding-left: 2px;
-
+  padding-left: 4px;
+font-family: 나눔스퀘어_ac light;
 }
+
+@media screen and (min-width: 768px) {
+  .box1 { flex-direction: row;
+  align-items: flex-start;
+  padding: 8px 24px;
+}}
 
 .menu1 li:hover {
   background-color: #957862;
@@ -32,18 +43,19 @@
 
 }
 
+
+
 .menu1 li {
   padding: 4px 10px;
 	margin: px;
 		font-size: 15px;
+    text-align: center;
 }
 
 	.box1 {
 		color: #000000}
 
-	.box2 {position : relative;
-		left: 350px;
-		top: 50px;
+	.box2 {
 	         width: 200px;
 	         height: 200px;
 margin-top: 20px;
@@ -54,9 +66,11 @@ margin-top: 20px;
 
 		.explain{position : relative;
 left: 700px;
-		 top: -650px;
+		 top: -720px;
 		 color:black;
 		 border: 1px solid #ffffff;
+font-family: 나눔스퀘어_ac light;
+		 font-size: 20px;
 		}
 
 		.explain1{position : relative;
@@ -64,17 +78,20 @@ left: 700px;
 		 top: -650px;
 		 color:black;
 		 border: 1px solid #ffffff;
-		 margin-top: 30px;
+		 margin-top: 50px;
+	font-family: 나눔스퀘어_ac light;
+		 font-size: 40px;
 		}
 
 		.explain2{position : relative;
-left: 800px;
+left: 700px;
 		 top: -650px;
 		 color:black;
 		 border: 1px solid #ffffff;
-		 margin-top: 30px;
+		 margin-top: 20px;
+	font-family: 나눔스퀘어_ac light;
+		 font-size: 20px;
 		}
-
 .imagelogo1 {
 	position : relative;
 left: 700px;
@@ -87,25 +104,19 @@ left: 700px;
 .imagelogo2 {
 	position : relative;
 left: 1550px;
-	 top: -1570px;
+	 top: -1950px;
 	 color:black;
 	 border: 1px solid #ffffff;
 	 margin-top: 70px;
 }
 
-footer {	position : relative;
+.fot {
+  margin-top: -1200px;
+}
 
-	top : -900px;
-          border: 1px solid #000000;
-	height: 200px;
-	weight: 1000px;
-
-	background-position: center;
-          background-color: #443735;
-
-	text-align: center;
-	font-size: 20px;
-	color: #FFFFFF;}
+.navbar_icons li {
+  padding: 4px 10px;
+}
 
 </style>
 
@@ -113,7 +124,8 @@ footer {	position : relative;
 	<header>
 <div class="mainlogo">
 	<div class="main">
-<a href="C:\Users\N\Desktop\month1\css0609\0610\index.html"> MONTH</a>
+	<a href="index.html">
+<img src="image11/4x/300.jpg" width="200" height="100" alt="">
 </div>
 </div>
 
@@ -128,8 +140,8 @@ footer {	position : relative;
 			<li><a href="index.html">홈</a></li>
 			<li><a href="0608-1.html">회사소개</a></li>
 			<li><a href="0608-3.html">도시정보</a></li>
-			<li><a href="#hotel">호텔정보</a></li>
-			<li><a href="#food">식당정보</a></li>
+			<li><a href="0608-4.html">호텔정보</a></li>
+			<li><a href="0608-6.html">식당정보</a></li>
 			    </ul>
 
 			    <ul class="navbar_icons">
@@ -149,10 +161,10 @@ footer {	position : relative;
 
 
 	<li><a href="0608-4.html"><h2>호텔정보</h2></a></li>
-	<li><a href="#hotel">객실정보</a></li>
-	<li><a href="#hotel">혜택</a></li>
+	<li><a href="0608-5.html">객실정보</a></li>
 
-	<li><a href="#hotel"><h2>식당정보</h2></a></li>
+
+	<li><a href="0608-6.html"><h2>식당정보</h2></a></li>
 
 	</div>
 	</ul>
@@ -168,35 +180,30 @@ footer {	position : relative;
 </div>
 
 <div class="explain1">
-	따뜻한 공기와 깨끗한 거리<br>
+	 따뜻한 공기와 깨끗한 거리<br><br><br>
+	</div>
+	<div class="explain2">
 	<br>
-	싱가포르는 동남아시아에 위치하고 있으며 365일 따뜻함을 유지하고 있습니다.<br>
-	면적은 서울보다 조금 큰 크기를 가지고 있으며 녹지가 많아 전체 면적의 30%에<br>
+	싱가포르는 동남아시아에 위치하고 있으며 365일 따뜻함을 유지하고 있습니다.<br><br><br>
+	면적은 서울보다 조금 큰 크기를 가지고 있으며 녹지가 많아 전체 면적의 30%에<br><br><br>
 	이를 정도 입니다.<br>
 <br>
 <br>
-	나라가 작고 교통이 잘 발달 되어있어 여행하기 편한 도시 입니다.<br>
-	싱가포르는 무역도시로 유명한 나라이며 여러  민족들이 모여사는 나라로 다양한<br>
-	인종과 문화, 음식을 경험 할 수 있습니다.
+	나라가 작고 교통이 잘 발달 되어있어 여행하기 편한 도시 입니다.<br><br><br>
+	싱가포르는 무역도시로 유명한 나라이며 여러  민족들이 모여사는 나라로 다양한<br><br><br>
+	인종과 문화, 음식을 경험 할 수 있습니다.<br><br>
 </div>
 
 <div class="imagelogo2">
 	<img src="image11/4x/500.jpg" width="300" height="800" alt="">
 </div>
+<div class="fot">
+<tr>
 
+	<td colspan="13">
+		<img src="images/30.jpg" width="1920" height="494" alt=""></td>
+</tr>
 
-
-
-<footer>
-
-    <br>
-   다음달 여행 정보를 미리 알고 싶다면?<br>
-   <div id="box1">
-	</div>
-	<div id="box2">
-   MONTH
 </div>
- </footer>
-
 </body>
 </html>
