--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 </head>
 <style>
 
-.mainimage {    width: 100%;
-    text-align: center;
-    font-size: 20px;
 
-  justify-content: center;
-  margin-top: 50px;
+
+.mainmay {position : relative;
+
+ top: -650px;
+
+  font-family: Brush Script Std Medium;
+text-align: center;
+font-size: 200px;
+color: white;
 }
 
 .keyword2 {
@@ -36,27 +40,50 @@
   display: flex;
   list-style: none;
   padding-left: 0;
-  margin-top:50px;
+}
+
+.keyword2 {position : relative;
+
+ top: -450px;
+
+  border: 35px;
+  width: 1920px;
+  height: 201px;
+  	font-size: 35px;
+    color: white;
 }
 
 .keyword2 {
-  background-color: #957862;
-  border: 30px;
-  width: 1920px;
-  height: 100px;
-  	font-size: 30px;
-    color: white;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  list-style: none;
+  padding-left: 0;
 }
+
+.keyword2 {position : relative;
+
+ top: -450px;
+
+  border: 35px;
+  width: 1920px;
+  height: 201px;
+  	font-size: 35px;
+    color: white;
+}
+
+.line {position : relative;
+left: 100px;
+ top: -540px;
+}
+
 
 .may {
   width: 100%;
    text-align: center;
-   font-size: 50px;
+   font-size: 80px;
  justify-content: center;
-  margin-top:300px;
+  margin-top:-250px;
 
+font-family: 나눔스퀘어_ac light;
 }
 
 .mainpicture {
@@ -64,7 +91,7 @@
    text-align: center;
    font-size: 60px;
 
-  margin-top:100px;
+  margin-top:300px;
 
 }
 
@@ -77,11 +104,20 @@ width: 100%
 font-size: 40px;
 }
 
+.may3 {position : relative;
+
+ top: -670px;
+  font-family: 나눔스퀘어_ac regular;
+    text-align: center;
+    font-size: 25px;
+    color: white;
+}
 .may1 {position : relative;
 
  text-align: justify;
  margin-top: 50px;
-margin-left: 300px;}
+margin-left: 310px;
+font-family: 나눔스퀘어_ac ;}
 
  .may2 {
    background-color: #FFFFFF;
@@ -90,8 +126,9 @@ margin-left: 300px;}
      color: black;
      width: 100%;
 font-size: 30px;
-margin-left: 300px;
+margin-left: 310px;
  margin-top:50px;
+ font-family: 나눔스퀘어_ac light;
  }
 
  .may2 {position : relative;
@@ -105,15 +142,34 @@ margin-left: 300px;
      margin-top:100px;
  }
 
+ .more1{  position : relative;
+top: -200px;
+left: 300px;
+   width: 100%;
+   text-align: center;
+     margin-top:100px;
+ }
+
+
 .mainimage2 {
   width: 100%;
   text-align: center;
     margin-top:500px;
 }
-.mainimage3 {
+
+.mainimage4 {position : relative;
+  top: -1120px;
+  left: 370px;
   width: 100%;
   text-align: center;
     margin-top:500px;
+}
+
+
+.mainimage3 {
+  width: 100%;
+  text-align: center;
+    margin-top:-500px;
 }
 
 .main4 {position : relative;
@@ -124,7 +180,8 @@ margin-left: 300px;
  font-size: 50px;
 left: 1070px;
 top: -1300px;
-
+font-family: 나눔스퀘어_ac ;
+color: #373838;
 }
 
 .main5 {position : relative;
@@ -134,8 +191,9 @@ top: -1300px;
       width: 100%;
  font-size: 15px;
 left: 1070px;
-top: -1200px;
-
+top: -1150px;
+font-family: 나눔스퀘어_ac ;
+color: #B7B6B6;
 }
 
 .move {position : relative;
@@ -149,6 +207,7 @@ top: -1200px;
   text-align: center;
     margin-top: -500px;
     font-size: 50px;
+font-family: 나눔스퀘어_ac light;
 }
 
 .food2 {
@@ -156,6 +215,7 @@ top: -1200px;
 text-align: center;
     font-size: 30px;
     margin-top: 30px;
+    font-family: 나눔스퀘어_ac light;
 }
 
 .buger {position : relative;
@@ -171,7 +231,7 @@ text-align: center;
   width: 100%;
   text-align: center;
     margin-top: 100px;
-
+font-family: 나눔스퀘어_ac ;
 font-size: 30px;
 
 }
@@ -182,8 +242,8 @@ font-size: 30px;
   width: 100%;
   text-align: right
     margin-top: 50px;
-
-font-size: 20px;
+font-family: 나눔스퀘어_ac light;
+font-size: 25px;
 
 }
 
@@ -206,37 +266,37 @@ font-size: 30px;
 }
 
 .tinname {position : relative;
-  left: 500px;
-  top: -610px;
+  left: 200px;
+  top: -1020px;
   width: 100%;
   text-align: center;
     margin-top: 100px;
-
+font-family: 나눔스퀘어_ac ;
 font-size: 30px;
 
 }
 
 .tinname2 {position : relative;
-  left: 1300px;
-  top: -610px;
+  left: 1000px;
+  top: -1050px;
   width: 100%;
   text-align: left;
     margin-top: 50px;
-
-font-size: 20px;
+font-family: 나눔스퀘어_ac light;
+font-size: 25px;
 
 }
 
 .tinname3 {position : relative;
-  left: -400px;
-  top: -550px;
+  left: -700px;
+  top: -970px;
   width: 100%;
   text-align: right;
 }
 
 .fish {position : relative;
-  left:00px;
-  top: -410px;
+  left:-300px;
+  top: -810px;
   width: 100%;
   text-align: center;
     margin-top: 100px;
@@ -246,24 +306,24 @@ font-size: 30px;
 }
 
 .fishname1 {position : relative;
-  left: 570px;
-  top: -610px;
+  left: 250px;
+  top: -1420px;
   width: 100%;
   text-align: center;
     margin-top: 100px;
-
+font-family: 나눔스퀘어_ac ;
 font-size: 30px;
 
 }
 
 .fishname2 {position : relative;
-  left: 1300px;
-  top: -610px;
+  left: 1000px;
+  top: -1410px;
   width: 100%;
   text-align: left;
     margin-top: 50px;
-
-font-size: 20px;
+font-family: 나눔스퀘어_ac light;
+font-size: 25px;
 
 }
 
@@ -274,20 +334,7 @@ font-size: 20px;
   text-align: right;
 }
 
-.foot {
-  background-color: #443735;
-  border: 20px;
-  width: 100%
-
-
-}
-
-.foot1 {position : relative;
-
-  top: -5px;
-  width: 3000px;
-height: 490px;
-  text-align: center;
+footer { margin-top: -1000px;
 }
 
 
@@ -315,7 +362,7 @@ height: 490px;
 <li><a href="0608-1.html">회사소개</a></li>
 <li><a href="0608-3.html">도시정보</a></li>
 <li><a href="0608-4.html">호텔정보</a></li>
-<li><a href="#food">식당정보</a></li>
+<li><a href="0608-6.html">식당정보</a></li>
     </ul>
 
     <ul class="navbar_icons">
@@ -327,21 +374,38 @@ height: 490px;
 <a href="" class="navbar_tooglebtn">
 <i class="fa fa-bars" aria-hidden="true"></i>
 </a>
+</nav>
 </header>
 
 <div class="mainimage">
-  <img src="images/main1.jpg" alt=""
-height="660" width="1520">
-</div>
-<div class="keyword2">
-  <li> <h3>이번 여행 키워드</h1></li>
-  <li><h6>01 따뜻한</h6></li>
-  <li><h6>02 휴식</h6></li>
-  <li><h6>03 나만의 공간</h6></li>
+  <img src="image11/4x/998.jpg" alt=""
+height="1080" width="1920">
 </div>
 
-<div class="may">
-  5월을 왜 싱가포르로 결정 하셨나요?
+<div class="mainmay">
+  May
+</div>
+
+<div class="may3">
+열심히 일한 나를 위해 휴식을 주자
+</div>
+
+
+
+<div class="keyword2">
+  <li> <h3>이번 여행 키워드</h1></li>
+  <li><h6> 따뜻한</h6></li>
+  <li><h6> 휴식</h6></li>
+  <li><h6> 나만의 공간</h6></li>
+
+</div>
+
+<div class="line">
+<img src="image11/4x/3.jpg" width="1200" height="1" alt=""></td>
+</div>
+
+<div class="may" >
+  MONTH는 5월을 왜 싱가포르로 선택했을까?
 </div>
 
 <div class="mainpicture">
@@ -355,7 +419,7 @@ height="660" width="1520">
 </div>
 
 
-<div class="may1">
+<div class="may1" >
 
 따뜻한 공기와 깨끗한 거리<br>
 
@@ -379,6 +443,14 @@ height="660" width="1520">
   <img src="images/4x/9.jpg" alt=""
 height="900" width="1300">
 </div>
+
+<div class="mainimage4">
+  <a href="0608-4.html">
+  <img src="image11/4x/02.jpg" alt=""
+  height="620" width="560">
+</a>
+</div>
+
 
 <div class="mainimage3">
   <img src="images/4x/10.jpg" alt=""
@@ -455,7 +527,7 @@ Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
 
 <div class="tin">
   <img src="images/4x/21.jpg"width="600" height="500" alt="">
-
+</div>
   <div class="tinname">
     Din Tai Fung(딘타이펑)<br><br>
   </div>
@@ -477,7 +549,7 @@ Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
 
     <div class="fish">
       <img src="images/4x/23.jpg"width="600" height="500" alt="">
-
+</div>
       <div class="fishname1">
       고든 램지의 Bread Street Kitchen<br><br>
       </div>
@@ -493,11 +565,13 @@ Black Tap(블랙 탭)은 근사하면서 여유로운 옛<br>
   분위기는 숨겨진 스피커에서 나오는<br>
   음악으로 더욱 고조됩니다.<br>
       </div>
-
+    </div>
+  </div>
 <footer>
-  <div class="foot">
-    <div class="foot1">
+<div class="fot">
+  <a href="index.html">
       <img src="images/30.jpg" alt="">
+
   </div>
 </footer>
 </body>
