--- a/index.html
+++ b/index.html
@@ -476,12 +476,14 @@ width="1301" height="1304">
 <br><br>
 보다 만족스러운 여행을 제공하고자 합니다.
 <br><br><br><br>
+  <a href="0608-5.html">
 <img src="images/4x/11.jpg" />
 </div>
 
 <div class="move">
+  <a href="0608-5.html">
 <img src="images/4x/12.jpg" />
-
+</a>
 </div>
 
 <div class="food">
