--- a/0608-4.html
+++ b/0608-4.html
@@ -171,7 +171,7 @@ font-family: 나눔스퀘어_ac bold;
 			<li><a href="0608-1.html">회사소개</a></li>
 			<li><a href="0608-3.html">도시정보</a></li>
 			<li><a href="0608-4.html">호텔정보</a></li>
-			<li><a href="#food">식당정보</a></li>
+			<li><a href="0608-6.html">식당정보</a></li>
 			    </ul>
 
 			    <ul class="navbar_icons">
