--- a/0608-6.html
+++ b/0608-6.html
@@ -261,7 +261,7 @@ font-family: 나눔스퀘어_ac light;
 	<header>
 <div class="mainlogo">
 	<div class="main">
-		<a href="index1.html">
+		<a href="index.html">
 <img src="image11/4x/300.jpg" width="200" height="100" alt="">
 </a>
 </div>
@@ -275,7 +275,7 @@ font-family: 나눔스퀘어_ac light;
     </div>
 
     <ul class="navbar_menu">
-<li><a href="index1.html">홈</a></li>
+<li><a href="index.html">홈</a></li>
 <li><a href="0608-1.html">회사소개</a></li>
 <li><a href="0608-3.html">도시정보</a></li>
 <li><a href="0608-4.html">호텔정보</a></li>
@@ -291,7 +291,7 @@ font-family: 나눔스퀘어_ac light;
 <body>
 	<ul class="box1">
 	<div class="menu1">
-		<li><a href="index1.html"><h2 >홈</h3></a></li>
+		<li><a href="index.html"><h2 >홈</h3></a></li>
 	<li><a href="0608-1.html"><h2>회사소개</h3></a></li>
 	<li><a href="0608-2.html">MONTH란?</a></li>
 	<li><a href="0608.html">HISTORY</a></li>
